--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,31 @@
+# Python
 venv/
 dimeformatter/.env
+dimeformatter/__pycache__/
+*.pyc
+*.pyo
+*.pyd
+__pycache__/
+
+# Node.js
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.pnpm-debug.log*
+
+# Build outputs
+dimeformatter/static/dist/
+.vite/
+
+# IDE
 .DS_Store
 .vscode/
+*.swp
+*.swo
+
+# Test data
 tests/datasets
-dimeformatter/__pycache__
+
+# Logs
+*.log
